Add student projects

--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
         line-height: 1.8em;
       }
 
+      ul {
+        list-style-type: circle;
+        padding-left: 3em;
+        text-align: left;
+        line-height: 4em;
+      }
+
       .highlight {
         background: #fff;
       }
@@ -109,8 +116,28 @@
       </figcaption>
     </section>
 
+    <section>
+      Check out these other fantastic student websites for more ideas on how to build your own:
+        <ul>
+          <li><a href="http://scratchpad.io/phobic-earth-2339">Our Slime Shop</a></li>
+          <li><a href="http://scratchpad.io/imperfect-wren-5100">Pastel.net</a></li>
+          <li><a href="http://scratchpad.io/ossified-bear-8683">WeirdWebb</a></li>
+          <li><a href="http://scratchpad.io/second-rose-6808">Black Girls Who Changed The World</a></li>
+          <li><a href="http://scratchpad.io/fluttering-sky-259">Artclassweb.com</a></li>
+          <li><a href="http://scratchpad.io/extra-small-milk-4735">Dance like you never Danced before</a></li>
+          <li><a href="http://scratchpad.io/icky-hammer-1214">Cookies! And why they're the best</a></li>
+          <li><a href="http://scratchpad.io/parsimonious-number-6922">Subway Vs Panera Sandwiches</a></li>
+          <li><a href="http://scratchpad.io/stupendous-cream-457">Throwback Vines</a></li>
+          <li><a href="http://scratchpad.io/hissing-coat-1121">How To Create And Write Books</a></li>
+        </ul>
+      </section>
+
     <footer>
       If you want to learn more about how the Duolingo app is programmed, check out <a href="https://making.duolingo.com/">this link</a>!
+      <br>
+      If you want to check out the <em>source code</em> of this page, remember to right-click and choose <strong>Inspect</strong>
+      <br>
+      Build your own website on <a href="http://scratchpad.io">Scratchpad.io</a>!
       <br>
       <em>Thanks for visiting! ❤</em>
     </footer>
