Add resource links

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>Miss Ariel Likes Languages!</title>
     <style>
-      body {
+    body {
         padding-top: 32px;
         text-align: center;
         font-family: courier, monospace;
@@ -42,6 +42,11 @@
       h2 {
         font-size: 2em;
         line-height: 1.8em;
+      }
+
+      h3 {
+        font-size: 1em;
+        line-height: 1em;
       }
 
       ul {
@@ -92,32 +97,37 @@
       </h2>
     </header>
 
-    <section>
-      <p>
-        My favorite technology is <a href="https://www.duolingo.com">Duolingo</a>. I like it because it is an app
-        where I can learn languages on my phone.
-      </p>
-      <p>
-        I learned a lot of Spanish on Duolingo. Now I am practicing French too.
-        I practice every time I ride the train.
-      </p>
-    </section>
+    <main>
+      <section>
+        <p>
+          My favorite technology is <a href="https://www.duolingo.com">Duolingo</a>. I like it because it is an app
+          where I can learn languages on my phone.
+        </p>
+        <p>
+          I learned a lot of Spanish on Duolingo. Now I am practicing French too.
+          I practice every time I ride the train.
+        </p>
+      </section>
 
-    <section>
-      <strong>Why do I like it?</strong> Duolingo is easy and fun. The app has cute pictures of this owl named Duo who makes weird faces.
-      <br>
-      <img src="https://cdn.vox-cdn.com/thumbor/es3EFJjkH8IMj36z22gt6I_3XpE=/0x0:1840x1088/1200x0/filters:focal(0x0:1840x1088):no_upscale()/cdn.vox-cdn.com/uploads/chorus_asset/file/13621832/3_the_many_faces_of_duo.png" width="70%">
-    </section>
+      <section>
+        <p>
+          <strong>Why do I like it?</strong> Duolingo is easy and fun. The app has cute pictures of this owl named Duo who makes weird faces.
+        </p>
+        <br>
+        <img src="https://cdn.vox-cdn.com/thumbor/es3EFJjkH8IMj36z22gt6I_3XpE=/0x0:1840x1088/1200x0/filters:focal(0x0:1840x1088):no_upscale()/cdn.vox-cdn.com/uploads/chorus_asset/file/13621832/3_the_many_faces_of_duo.png" width="70%">
+      </section>
 
-    <section>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/Olzr2n8j3O4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      <figcaption>
-        This is a video of Naomi Osaka meeting Serena Williams on the court. Serena Williams is the greatest athlete. Naomi Osaka is also a great tennis player who speaks Japanese!
-      </figcaption>
-    </section>
+      <section>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Olzr2n8j3O4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <figcaption>
+          This is a video of Naomi Osaka meeting Serena Williams on the court. Serena Williams is the greatest athlete. Naomi Osaka is also a great tennis player who speaks Japanese!
+        </figcaption>
+      </section>
 
-    <section>
-      Check out these other fantastic student websites for more ideas on how to build your own:
+      <section>
+        <p>
+          Check out these other fantastic student websites for more ideas on how to build your own:
+        </p>
         <ul>
           <li><a href="http://scratchpad.io/phobic-earth-2339">Our Slime Shop</a></li>
           <li><a href="http://scratchpad.io/imperfect-wren-5100">Pastel.net</a></li>
@@ -131,6 +141,19 @@
           <li><a href="http://scratchpad.io/hissing-coat-1121">How To Create And Write Books</a></li>
         </ul>
       </section>
+
+      <section>
+        <h3>More Resources:</h3>
+        <ul>
+          <li><a href="https://www.cssfontstack.com">Web fonts</a></li>
+          <li><a href="http://cssgradient.io">CSS Gradients</a></li>
+          <li><a href="http://emojipedia.org">Emojipedia</a></li>
+          <li><a href="http://coolors.co">Color palette ideas</a></li>
+          <li><a href="http://giphy.com">Giphy</a></li>
+
+        </ul>
+      </section>
+    </main>
 
     <footer>
       If you want to learn more about how the Duolingo app is programmed, check out <a href="https://making.duolingo.com/">this link</a>!
